<resources>
    <string name="app_name">GardenVille</string>
    <string name="grow_your_own_food_in_a_fun_and_easy_way">Grow your own food in a fun and easy way!</string>

    <string name="click_msg">Something clicked..</string>
    <string name="permission_fail">"If no request shows up, change permissions in the app settings."</string>
    <string name="enter_email">"Enter e-mail"</string>
    <string name="enter_registered_email">"Enter registered e-mail"</string>
    <string name="enter_password">"Enter password"</string>
    <string name="users">"Users"</string>

    <string name="email">Email</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="error_empty_email_field">Enter email address</string>
    <string name="error_empty_password_field">Enter password</string>
    <string name="registration_successful">User account has been created </string>
    <string name="registration_unsuccessful">User account has not been created </string>

    <!--Reset Password activity -->
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We need your registered Email address to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>

    <!--Enter Pincode activity -->
    <string name="pin_code_header">Hi there!</string>
    <string name="pin_hint">PIN</string>
    <string name="pin_text">Good to have you here. To get started, fill in the PIN of the product.</string>

    <!--Add Plant Menu Activity -->
    <string name="add_plants">Add Plants</string>
    <string name="plant">Plant</string>
    <string name="percent">%</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_plant">Hello User! You have not selected a plant yet :(</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="nav_my_plants">My Plants</string>
    <string name="nav_my_network">My Network</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="join_the_community">Join the community!</string>
    <string name="join_community_subtext">Signing up let\'s you find like-minded people. Connect with them and share your milestones!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password_subtext">Fill in your E-mail, and we\'ll send you a link to reset your password.</string>
    <string name="forgot_password_header">Oops!</string>
    <string name="health_low">Overall Health: Low</string>
    <string name="health_medium">Overall Health: Medium</string>
    <string name="health_high">Overall Health: High</string>
    <string name="harvest_left">left until harvest!</string>
    <string name="average_harvest">Average Harvest Time:</string>
    <string name="my_garden">My Garden</string>
    <string name="my_milestones">My Milestones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
