<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id = "@+id/nav_my_plants"
            android:title="@string/nav_my_plants"
            android:textSize="@dimen/hamburger_menu_text_size"
            android:icon="@drawable/ic_plant"
            />

        <item android:id = "@+id/nav_my_network"
            android:title = "@string/nav_my_network"
            android:textSize="@dimen/hamburger_menu_text_size"
            android:icon="@drawable/ic_public_black_24dp"
            />

        <item android:id = "@+id/nav_settings"
            android:title = "@string/nav_settings"
            android:textSize="@dimen/hamburger_menu_text_size"
            android:icon="@drawable/ic_settings_black_24dp"/>

        <item android:id = "@+id/nav_logout"
            android:title = "@string/nav_logout"
            android:textSize="@dimen/hamburger_menu_text_size"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>
    </group>

    <!-- adding items in the action bar-->
    <item android:id = "@+id/add_plant_button"
        android:title=""
        android:icon = "@drawable/ic_add"
        app:showAsAction="always"/>

</menu>
