<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".authentication.firebase.FireBaseAccLoginActivity"
    tools:layout_editor_absoluteY="25dp"
    android:background="@drawable/login_network">

    <include
        android:id="@+id/authCommunityToolbarLogin"
        layout="@layout/auth_community_screen_toolbar_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/authCommunityToolbarLogin"
        android:background="@drawable/toolbar_drop_shadow"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authCommunityToolbarLogin"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authCommunityToolbarLogin"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="228dp"
                android:layout_height="41dp"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="228dp"
                android:layout_height="41dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_email"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.983" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="228dp"
                android:layout_height="43dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_text_view"
                android:text="@string/btn_login"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.673" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="38dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:elevation="2dp"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintHorizontal_bias="0.943"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toTopOf="@+id/btn_login"
                android:contentDescription="@string/app_name" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="300dp"
                android:layout_height="39dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/forgot_your_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintVertical_bias="0.084" />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>